# smeli

./: .gitignore  README.md  agenda.md  cheat_sheet.md  doi.py  index.html  mkdocs.yml  pyproject.toml  smeli.py
docs/: api.md  candidate-records.md  cli.md  development.md  examples.md  index.md
docs/reference/: bibtex.md  candidates.md  cli.md  normalize.md  smeli.md  sources.md
search/: search_index.json
smeli/: __init__.py  __main__.py  bibtex.py  candidates.py  cli.py  config.py  http.py  normalize.py  sources.py
test/: test_api_docs.py  test_arxiv_helpers.py  test_author_and_date_helpers.py  test_bibtex.py  test_candidate_conversion_and_matching.py  test_candidate_scoring_and_merging.py  test_cli_arguments.py  test_cli_details.py  test_http_and_metadata_enrichment.py  test_normalization.py  test_public_api.py  test_source_searches.py  test_work_candidate_orchestration.py
