[project]
name = "smeli"
version = "0.1.0"
description = "Scholarly MEtadata Lookup Interface."
requires-python = ">=3.10"
dependencies = [
    "requests",
    "python-dotenv",
]

[project.scripts]
smeli = "smeli.cli:main"

[project.optional-dependencies]
test = [
    "pytest",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["."]
